--- a/sobre.html
+++ b/sobre.html
@@ -101,7 +101,7 @@
 
     <div class="content-block row align-items-center">
       <div class="col-md-6 mb-4">
-        <img src="/img/feiraIMG.jpg" alt="Feira de tecnologia" class="illustration">
+        <img src="img/feiraIMG.jpg" alt="Feira de tecnologia" class="illustration">
       </div>
       <div class="col-md-6">
         <p class="feira-text">
@@ -113,7 +113,7 @@
 
     <div class="content-block row align-items-center flex-md-row-reverse">
       <div class="col-md-6 mb-4">
-        <img src="/img/labIMG.png" alt="Laboratório de tecnologia" class="illustration">
+        <img src="img/labIMG.png" alt="Laboratório de tecnologia" class="illustration">
       </div>
       <div class="col-md-6">
         <p class="feira-text">
@@ -125,7 +125,7 @@
 
     <div class="content-block row align-items-center">
       <div class="col-md-6 mb-4">
-        <img src="/img/roboIMG.png" alt="Robô educacional" class="illustration">
+        <img src="img/roboIMG.png" alt="Robô educacional" class="illustration">
       </div>
       <div class="col-md-6">
         <p class="feira-text">
@@ -136,7 +136,7 @@
 
     <div class="content-block row align-items-center flex-md-row-reverse">
       <div class="col-md-6 mb-4">
-        <img src="/img/realidadevirtualIMG.jfif" alt="Realidade virtual na educação" class="illustration">
+        <img src="img/realidadevirtualIMG.jfif" alt="Realidade virtual na educação" class="illustration">
       </div>
       <div class="col-md-6">
         <p class="feira-text">
@@ -191,4 +191,5 @@
     © 2025 TechPlay - Feira de Tecnologia e Jogos Educativos
   </footer>
 </body>
+
 </html>
